--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "express": "~4.13.1",
+    "fortune": "^4.2.5",
     "knex": "^0.11.9",
     "moment": "^2.14.1",
     "morgan": "~1.6.1",
