--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "knex": "^0.11.9",
     "moment": "^2.14.1",
     "morgan": "~1.6.1",
+    "passport": "^0.3.2",
     "pg": "^6.0.3",
     "serve-favicon": "~2.3.0"
   }
