--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "express": "~4.13.1",
+    "express-session": "^1.14.1",
     "fortune": "^4.2.5",
     "knex": "^0.11.9",
     "moment": "^2.14.1",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
+    "passport-twitter": "^1.0.4",
     "pg": "^6.0.3",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "dotenv": "^2.0.0"
   }
 }
