--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
-    "dotenv": "^2.0.0"
+    "chai": "^3.5.0",
+    "dotenv": "^2.0.0",
+    "mocha": "^3.1.2",
+    "supertest": "^2.0.0"
   }
 }
