--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
-    "connect-redis": "^3.1.0",
     "cookie-parser": "~1.3.5",
+    "cookie-session": "^2.0.0-alpha.1",
     "cors": "^2.8.1",
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "express": "~4.13.1",
-    "express-session": "^1.14.1",
     "fortune": "^4.2.5",
     "knex": "^0.11.9",
     "moment": "^2.14.1",
